[gd_scene load_steps=18 format=2]

[ext_resource path="res://racing/player.gd" type="Script" id=1]
[ext_resource path="res://racing/player2.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://racing/Tileset.png" type="Texture" id=4]
[ext_resource path="res://racing/blue-square-texture-background.jpg" type="Texture" id=5]
[ext_resource path="res://racing/1591119073-screen_shot_2020-06-02_at_10.30.13_am.png" type="Texture" id=6]
[ext_resource path="res://racing/Node2D.gd" type="Script" id=7]
[ext_resource path="res://racing/finish.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.2672, 22.9886 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.1801, 23.2865 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=8]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tileset.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "1591119073-screen_shot_2020-06-02_at_10.30.13_am.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "1591119073-screen_shot_2020-06-02_at_10.30.13_am.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 7 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3.04337, 58.9075 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="finish" type="KinematicBody2D" parent="."]
position = Vector2( 518.438, 508.195 )
scale = Vector2( 0.608232, -2.60235 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="finish"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="finish"]
texture = ExtResource( 3 )

[node name="Area2D1" type="Area2D" parent="finish"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="finish/Area2D1"]
shape = SubResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 8 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 4
centered_textures = true
collision_use_kinematic = true
collision_bounce = 1.0
format = 1
tile_data = PoolIntArray( -131021, 2, 0, -131020, 2, 0, -131019, 2, 0, -131018, 2, 0, -131017, 2, 0, -131016, 2, 0, -131015, 2, 0, -131014, 2, 0, -131013, 2, 0, -131012, 2, 0, -65496, 2, 0, -65495, 2, 0, -65494, 2, 0, -65493, 2, 0, -65492, 2, 0, -65491, 2, 0, -65490, 2, 0, -65489, 2, 0, -65488, 2, 0, -65487, 2, 0, -65486, 2, 0, -65485, 2, 0, -65484, 2, 0, -65483, 2, 0, -65482, 2, 0, -65481, 2, 0, -65480, 2, 0, -65479, 2, 0, -65478, 2, 0, -65477, 2, 0, -65476, 2, 0, -65475, 2, 0, -65474, 2, 0, -65473, 2, 0, -65472, 2, 0, -65471, 2, 0, -65470, 2, 0, -65469, 2, 0, -65468, 2, 0, -65467, 2, 0, -65466, 2, 0, -65458, 2, 0, -65457, 2, 0, -65455, 2, 0, -65454, 2, 0, -65453, 2, 0, -65452, 2, 0, -65451, 2, 0, -65450, 2, 0, -65440, 0, 0, -65439, 0, 0, -65438, 0, 0, -65437, 0, 0, -65436, 0, 0, -65435, 0, 0, -65416, 2, 0, -65415, 2, 0, -65414, 2, 0, -65413, 2, 0, -65412, 2, 0, -65411, 2, 0, 5, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 37, 2, 0, 38, 2, 0, 39, 2, 0, 40, 2, 0, 41, 2, 0, 42, 2, 0, 43, 2, 0, 44, 2, 0, 45, 2, 0, 46, 2, 0, 47, 2, 0, 48, 2, 0, 49, 2, 0, 50, 2, 0, 51, 2, 0, 52, 2, 0, 53, 2, 0, 54, 2, 0, 55, 2, 0, 56, 2, 0, 57, 2, 0, 58, 2, 0, 59, 2, 0, 60, 2, 0, 61, 2, 0, 62, 2, 0, 63, 2, 0, 64, 2, 0, 65, 2, 0, 66, 2, 0, 67, 2, 0, 68, 2, 0, 69, 2, 0, 70, 2, 0, 71, 2, 0, 72, 2, 0, 73, 2, 0, 74, 2, 0, 75, 2, 0, 76, 2, 0, 77, 2, 0, 78, 2, 0, 79, 2, 0, 80, 2, 0, 81, 2, 0, 82, 2, 0, 83, 2, 0, 84, 2, 0, 85, 2, 0, 86, 2, 0, 87, 2, 0, 88, 2, 0, 89, 2, 0, 90, 2, 0, 91, 2, 0, 92, 2, 0, 93, 2, 0, 94, 2, 0, 95, 2, 0, 96, 2, 0, 97, 2, 0, 98, 2, 0, 99, 2, 0, 100, 2, 0, 101, 2, 0, 102, 2, 0, 103, 2, 0, 104, 2, 0, 105, 2, 0, 106, 2, 0, 107, 2, 0, 108, 2, 0, 109, 2, 0, 110, 2, 0, 111, 2, 0, 112, 2, 0, 113, 2, 0, 114, 2, 0, 115, 2, 0, 116, 2, 0, 117, 2, 0, 118, 2, 0, 119, 2, 0, 120, 2, 0, 121, 2, 0, 122, 2, 0, 123, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 65557, 2, 0, 65558, 2, 0, 65559, 2, 0, 65560, 2, 0, 65561, 2, 0, 65562, 2, 0, 65563, 2, 0, 65564, 2, 0, 65565, 2, 0, 65566, 2, 0, 65567, 2, 0, 65568, 2, 0, 65569, 2, 0, 65570, 2, 0, 65571, 2, 0, 65572, 2, 0, 65573, 2, 0, 65574, 2, 0, 65575, 2, 0, 65576, 2, 0, 65577, 2, 0, 65578, 2, 0, 65579, 2, 0, 65580, 2, 0, 65581, 2, 0, 65582, 2, 0, 65583, 2, 0, 65584, 2, 0, 65585, 2, 0, 65586, 2, 0, 65587, 2, 0, 65588, 2, 0, 65589, 2, 0, 65590, 2, 0, 65591, 2, 0, 65592, 2, 0, 65593, 2, 0, 65594, 2, 0, 65595, 2, 0, 65596, 2, 0, 65597, 2, 0, 65598, 2, 0, 65599, 2, 0, 65600, 2, 0, 65601, 2, 0, 65602, 2, 0, 65603, 2, 0, 65604, 2, 0, 65605, 2, 0, 65606, 2, 0, 65607, 2, 0, 65608, 2, 0, 65609, 2, 0, 65610, 2, 0, 65611, 2, 0, 65612, 2, 0, 65613, 2, 0, 65614, 2, 0, 65615, 2, 0, 65616, 2, 0, 65617, 2, 0, 65618, 2, 0, 65619, 2, 0, 65620, 2, 0, 65621, 2, 0, 65622, 2, 0, 65623, 2, 0, 65624, 2, 0, 65625, 2, 0, 65626, 2, 0, 65640, 2, 0, 65641, 2, 0, 65642, 2, 0, 65643, 2, 0, 65644, 2, 0, 65645, 2, 0, 65646, 2, 0, 65647, 2, 0, 65648, 2, 0, 65649, 2, 0, 65650, 2, 0, 65651, 2, 0, 65652, 2, 0, 65653, 2, 0, 65654, 2, 0, 65655, 2, 0, 65656, 2, 0, 65657, 2, 0, 65658, 2, 0, 65659, 2, 0, 65660, 2, 0, 65661, 2, 0, 65662, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131185, 2, 0, 131186, 2, 0, 131187, 2, 0, 131188, 2, 0, 131189, 2, 0, 131190, 2, 0, 131191, 2, 0, 131192, 2, 0, 131193, 2, 0, 131194, 2, 0, 131195, 2, 0, 131196, 2, 0, 131197, 2, 0, 196609, 2, 0, 196613, 2, 0, 196696, 2, 0, 196727, 2, 0, 196728, 2, 0, 196729, 2, 0, 196730, 2, 0, 196731, 2, 0, 196732, 2, 0, 196733, 2, 0, 196734, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262197, 2, 0, 262262, 2, 0, 262263, 2, 0, 262264, 2, 0, 262265, 2, 0, 262266, 2, 0, 262267, 2, 0, 262268, 2, 0, 262270, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327801, 2, 0, 327802, 2, 0, 327803, 2, 0, 327804, 2, 0, 327806, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393337, 2, 0, 393338, 2, 0, 393339, 2, 0, 393340, 2, 0, 393342, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458873, 2, 0, 458874, 2, 0, 458875, 2, 0, 458878, 2, 0, 589822, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524387, 2, 0, 524411, 2, 0, 524412, 2, 0, 524414, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589895, 2, 0, 589948, 2, 0, 589950, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655396, 2, 0, 655486, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720932, 2, 0, 721022, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786455, 2, 0, 786558, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 852053, 2, 0, 852094, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917556, 2, 0, 917630, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983166, 2, 0, 1048577, 2, 0, 1048702, 2, 0, 1114113, 2, 0, 1114222, 2, 0, 1114238, 2, 0, 1179649, 2, 0, 1179718, 2, 0, 1179719, 2, 0, 1179720, 2, 0, 1179721, 2, 0, 1179722, 2, 0, 1179774, 2, 0, 1245185, 2, 0, 1245240, 2, 0, 1245241, 2, 0, 1245242, 2, 0, 1245243, 2, 0, 1245244, 2, 0, 1245245, 2, 0, 1245246, 2, 0, 1245247, 2, 0, 1245248, 2, 0, 1245249, 2, 0, 1245250, 2, 0, 1245251, 2, 0, 1245252, 2, 0, 1245253, 2, 0, 1245254, 2, 0, 1245255, 2, 0, 1245256, 2, 0, 1245257, 2, 0, 1245258, 2, 0, 1245259, 2, 0, 1245260, 2, 0, 1245261, 2, 0, 1245262, 2, 0, 1245263, 2, 0, 1245264, 2, 0, 1245265, 2, 0, 1245266, 2, 0, 1245267, 2, 0, 1245268, 2, 0, 1245269, 2, 0, 1245270, 2, 0, 1245271, 2, 0, 1245272, 2, 0, 1245273, 2, 0, 1245310, 2, 0, 1310721, 2, 0, 1310769, 2, 0, 1310770, 2, 0, 1310771, 2, 0, 1310772, 2, 0, 1310773, 2, 0, 1310774, 2, 0, 1310775, 2, 0, 1310776, 2, 0, 1310777, 2, 0, 1310778, 2, 0, 1310808, 2, 0, 1310809, 2, 0, 1310810, 2, 0, 1310811, 2, 0, 1310812, 2, 0, 1310813, 2, 0, 1310814, 2, 0, 1310815, 2, 0, 1310817, 2, 0, 1310846, 2, 0, 1376257, 2, 0, 1376299, 2, 0, 1376300, 2, 0, 1376301, 2, 0, 1376302, 2, 0, 1376303, 2, 0, 1376304, 2, 0, 1376354, 2, 0, 1376355, 2, 0, 1376357, 2, 0, 1376382, 2, 0, 1441793, 2, 0, 1441803, 2, 0, 1441825, 2, 0, 1441826, 2, 0, 1441827, 2, 0, 1441828, 2, 0, 1441829, 2, 0, 1441830, 2, 0, 1441831, 2, 0, 1441832, 2, 0, 1441833, 2, 0, 1441834, 2, 0, 1441891, 2, 0, 1441892, 2, 0, 1441893, 2, 0, 1441894, 2, 0, 1441918, 2, 0, 1507328, 0, 0, 1507329, 2, 0, 1507359, 2, 0, 1507360, 2, 0, 1507361, 2, 0, 1507362, 2, 0, 1507363, 2, 0, 1507364, 2, 0, 1507426, 2, 0, 1507427, 2, 0, 1507428, 2, 0, 1507429, 2, 0, 1507430, 2, 0, 1507431, 2, 0, 1507432, 2, 0, 1507454, 2, 0, 1572864, 0, 0, 1572865, 2, 0, 1572890, 2, 0, 1572891, 2, 0, 1572892, 2, 0, 1572893, 2, 0, 1572894, 2, 0, 1572895, 2, 0, 1572896, 2, 0, 1572965, 2, 0, 1572966, 2, 0, 1572967, 2, 0, 1572968, 2, 0, 1572969, 2, 0, 1572990, 2, 0, 1638400, 0, 0, 1638401, 2, 0, 1638424, 2, 0, 1638425, 2, 0, 1638426, 2, 0, 1638427, 2, 0, 1638428, 2, 0, 1638429, 2, 0, 1638502, 2, 0, 1638503, 2, 0, 1638504, 2, 0, 1638505, 2, 0, 1638517, 2, 0, 1638518, 2, 0, 1638526, 2, 0, 1703936, 0, 0, 1703937, 2, 0, 1703959, 2, 0, 1703960, 2, 0, 1703961, 2, 0, 1703962, 2, 0, 1704040, 2, 0, 1704041, 2, 0, 1704042, 2, 0, 1704062, 2, 0, 1769472, 0, 0, 1769473, 2, 0, 1769495, 2, 0, 1769496, 2, 0, 1769497, 2, 0, 1769577, 2, 0, 1769578, 2, 0, 1769598, 2, 0, 1835008, 0, 0, 1835009, 2, 0, 1835029, 2, 0, 1835030, 2, 0, 1835031, 2, 0, 1835032, 2, 0, 1835033, 2, 0, 1835113, 2, 0, 1835114, 2, 0, 1835134, 2, 0, 1900544, 0, 0, 1900545, 2, 0, 1900564, 2, 0, 1900565, 2, 0, 1900566, 2, 0, 1900567, 2, 0, 1900568, 2, 0, 1900649, 2, 0, 1900650, 2, 0, 1900670, 2, 0, 1966080, 0, 0, 1966081, 2, 0, 1966085, 2, 0, 1966100, 2, 0, 1966101, 2, 0, 1966102, 2, 0, 1966103, 2, 0, 1966104, 2, 0, 1966185, 2, 0, 1966186, 2, 0, 1966206, 2, 0, 2031616, 0, 0, 2031617, 2, 0, 2031636, 2, 0, 2031637, 2, 0, 2031638, 2, 0, 2031639, 2, 0, 2031722, 2, 0, 2031742, 2, 0, 2097152, 0, 0, 2097153, 2, 0, 2097172, 2, 0, 2097173, 2, 0, 2097174, 2, 0, 2097175, 2, 0, 2097258, 2, 0, 2097278, 2, 0, 2162688, 0, 0, 2162689, 2, 0, 2162707, 2, 0, 2162708, 2, 0, 2162709, 2, 0, 2162710, 2, 0, 2162711, 2, 0, 2162794, 2, 0, 2162814, 2, 0, 2228224, 0, 0, 2228225, 2, 0, 2228243, 2, 0, 2228244, 2, 0, 2228245, 2, 0, 2228246, 2, 0, 2228330, 2, 0, 2228350, 2, 0, 2293760, 0, 0, 2293761, 2, 0, 2293779, 2, 0, 2293780, 2, 0, 2293781, 2, 0, 2293782, 2, 0, 2293866, 2, 0, 2293886, 2, 0, 2359296, 0, 0, 2359297, 2, 0, 2359315, 2, 0, 2359316, 2, 0, 2359317, 2, 0, 2359318, 2, 0, 2359402, 2, 0, 2359420, 2, 0, 2359422, 2, 0, 2424832, 0, 0, 2424833, 2, 0, 2424851, 2, 0, 2424852, 2, 0, 2424853, 2, 0, 2424854, 2, 0, 2424938, 2, 0, 2424949, 2, 0, 2424956, 2, 0, 2424957, 2, 0, 2424958, 2, 0, 2490368, 0, 0, 2490369, 2, 0, 2490387, 2, 0, 2490388, 2, 0, 2490389, 2, 0, 2490492, 2, 0, 2490493, 2, 0, 2490494, 2, 0, 2555904, 0, 0, 2555905, 2, 0, 2555923, 2, 0, 2555924, 2, 0, 2556028, 2, 0, 2556029, 2, 0, 2556030, 2, 0, 2621440, 0, 0, 2621441, 2, 0, 2621450, 2, 0, 2621459, 2, 0, 2621460, 2, 0, 2621543, 2, 0, 2621564, 2, 0, 2621565, 2, 0, 2621566, 2, 0, 2686976, 0, 0, 2686977, 2, 0, 2686995, 2, 0, 2687081, 2, 0, 2687082, 2, 0, 2687100, 2, 0, 2687101, 2, 0, 2687102, 2, 0, 2752512, 0, 0, 2752513, 2, 0, 2752531, 2, 0, 2752614, 2, 0, 2752615, 2, 0, 2752616, 2, 0, 2752638, 2, 0, 2818048, 0, 0, 2818049, 2, 0, 2818067, 2, 0, 2818149, 2, 0, 2818150, 2, 0, 2818151, 2, 0, 2818174, 2, 0, 2883584, 0, 0, 2883585, 2, 0, 2883603, 2, 0, 2883684, 2, 0, 2883685, 2, 0, 2883686, 2, 0, 2883687, 2, 0, 2883710, 2, 0, 2949121, 2, 0, 2949139, 2, 0, 2949220, 2, 0, 2949221, 2, 0, 2949222, 2, 0, 2949246, 2, 0, 3014657, 2, 0, 3014675, 2, 0, 3014754, 2, 0, 3014755, 2, 0, 3014757, 2, 0, 3014782, 2, 0, 3080193, 2, 0, 3080211, 2, 0, 3080291, 2, 0, 3080292, 2, 0, 3080318, 2, 0, 3145729, 2, 0, 3145747, 2, 0, 3145748, 2, 0, 3145826, 2, 0, 3145827, 2, 0, 3145854, 2, 0, 3211265, 2, 0, 3211283, 2, 0, 3211284, 2, 0, 3211361, 2, 0, 3211362, 2, 0, 3211363, 2, 0, 3211390, 2, 0, 3276801, 2, 0, 3276819, 2, 0, 3276820, 2, 0, 3276895, 2, 0, 3276896, 2, 0, 3276897, 2, 0, 3276898, 2, 0, 3276926, 2, 0, 3342337, 2, 0, 3342356, 2, 0, 3342357, 2, 0, 3342430, 2, 0, 3342431, 2, 0, 3342462, 2, 0, 3407873, 2, 0, 3407892, 2, 0, 3407893, 2, 0, 3407963, 2, 0, 3407964, 2, 0, 3407965, 2, 0, 3407998, 2, 0, 3473409, 2, 0, 3473428, 2, 0, 3473429, 2, 0, 3473430, 2, 0, 3473494, 2, 0, 3473495, 2, 0, 3473496, 2, 0, 3473497, 2, 0, 3473498, 2, 0, 3473499, 2, 0, 3473534, 2, 0, 3538945, 2, 0, 3538965, 2, 0, 3538966, 2, 0, 3538967, 2, 0, 3538970, 2, 0, 3538971, 2, 0, 3538972, 2, 0, 3538973, 2, 0, 3538974, 2, 0, 3538975, 2, 0, 3538996, 2, 0, 3538997, 2, 0, 3538998, 2, 0, 3538999, 2, 0, 3539000, 2, 0, 3539001, 2, 0, 3539002, 2, 0, 3539003, 2, 0, 3539004, 2, 0, 3539005, 2, 0, 3539006, 2, 0, 3539007, 2, 0, 3539008, 2, 0, 3539009, 2, 0, 3539010, 2, 0, 3539011, 2, 0, 3539012, 2, 0, 3539013, 2, 0, 3539014, 2, 0, 3539015, 2, 0, 3539016, 2, 0, 3539017, 2, 0, 3539018, 2, 0, 3539019, 2, 0, 3539020, 2, 0, 3539021, 2, 0, 3539022, 2, 0, 3539023, 2, 0, 3539024, 2, 0, 3539025, 2, 0, 3539026, 2, 0, 3539027, 2, 0, 3539028, 2, 0, 3539029, 2, 0, 3539030, 2, 0, 3539070, 2, 0, 3604481, 2, 0, 3604512, 2, 0, 3604513, 2, 0, 3604514, 2, 0, 3604515, 2, 0, 3604516, 2, 0, 3604517, 2, 0, 3604518, 2, 0, 3604519, 2, 0, 3604520, 2, 0, 3604521, 2, 0, 3604522, 2, 0, 3604523, 2, 0, 3604524, 2, 0, 3604525, 2, 0, 3604526, 2, 0, 3604527, 2, 0, 3604528, 2, 0, 3604529, 2, 0, 3604530, 2, 0, 3604531, 2, 0, 3604532, 2, 0, 3604590, 2, 0, 3604606, 2, 0, 3670017, 2, 0, 3670018, 2, 0, 3670028, 2, 0, 3670142, 2, 0, 3735553, 2, 0, 3735554, 2, 0, 3735678, 2, 0, 3801089, 2, 0, 3801090, 2, 0, 3801214, 2, 0, 3866624, 2, 0, 3866625, 2, 0, 3866626, 2, 0, 3866750, 2, 0, 3932160, 2, 0, 3932161, 2, 0, 3932162, 2, 0, 3932286, 2, 0, 3997696, 2, 0, 3997697, 2, 0, 3997698, 2, 0, 3997724, 2, 0, 3997822, 2, 0, 4063232, 2, 0, 4063233, 2, 0, 4063234, 2, 0, 4063302, 2, 0, 4063315, 2, 0, 4063337, 2, 0, 4063358, 2, 0, 4128768, 2, 0, 4128769, 2, 0, 4128770, 2, 0, 4128772, 2, 0, 4128894, 2, 0, 4194304, 2, 0, 4194305, 2, 0, 4194306, 2, 0, 4194307, 2, 0, 4194308, 2, 0, 4194322, 2, 0, 4194430, 2, 0, 4259840, 2, 0, 4259841, 2, 0, 4259842, 2, 0, 4259843, 2, 0, 4259844, 2, 0, 4259885, 2, 0, 4259886, 2, 0, 4259966, 2, 0, 4390910, 2, 0, 4390911, 2, 0, 4325376, 2, 0, 4325378, 2, 0, 4325379, 2, 0, 4325380, 2, 0, 4325435, 2, 0, 4325502, 2, 0, 4325503, 2, 0, 4456445, 2, 0, 4390914, 2, 0, 4390915, 2, 0, 4390916, 2, 0, 4391039, 2, 0, 4521980, 2, 0, 4521981, 2, 0, 4521982, 2, 0, 4521983, 2, 0, 4456448, 2, 0, 4456449, 2, 0, 4456450, 2, 0, 4456451, 2, 0, 4456452, 2, 0, 4456575, 2, 0, 4521986, 2, 0, 4521987, 2, 0, 4522111, 2, 0, 4587521, 2, 0, 4587522, 2, 0, 4587523, 2, 0, 4587647, 2, 0, 4653058, 2, 0, 4653059, 2, 0, 4653060, 2, 0, 4653061, 2, 0, 4653062, 2, 0, 4653063, 2, 0, 4653064, 2, 0, 4653081, 2, 0, 4653183, 2, 0, 4718593, 2, 0, 4718594, 2, 0, 4718595, 2, 0, 4718596, 2, 0, 4718597, 2, 0, 4718598, 2, 0, 4718599, 2, 0, 4718600, 2, 0, 4718601, 2, 0, 4718602, 2, 0, 4718603, 2, 0, 4718604, 2, 0, 4718605, 2, 0, 4718606, 2, 0, 4718607, 2, 0, 4718608, 2, 0, 4718618, 2, 0, 4718619, 2, 0, 4718620, 2, 0, 4718621, 2, 0, 4718622, 2, 0, 4718623, 2, 0, 4718624, 2, 0, 4718625, 2, 0, 4718626, 2, 0, 4718627, 2, 0, 4718628, 2, 0, 4718629, 2, 0, 4718630, 2, 0, 4718631, 2, 0, 4718632, 2, 0, 4718633, 2, 0, 4718634, 2, 0, 4718635, 2, 0, 4718636, 2, 0, 4718637, 2, 0, 4718638, 2, 0, 4718639, 2, 0, 4718640, 2, 0, 4718641, 2, 0, 4718642, 2, 0, 4718643, 2, 0, 4718644, 2, 0, 4718714, 2, 0, 4718715, 2, 0, 4718716, 2, 0, 4718719, 2, 0, 4784129, 2, 0, 4784130, 2, 0, 4784131, 2, 0, 4784132, 2, 0, 4784133, 2, 0, 4784134, 2, 0, 4784135, 2, 0, 4784136, 2, 0, 4784137, 2, 0, 4784138, 2, 0, 4784139, 2, 0, 4784140, 2, 0, 4784141, 2, 0, 4784142, 2, 0, 4784143, 2, 0, 4784144, 2, 0, 4784145, 2, 0, 4784146, 2, 0, 4784147, 2, 0, 4784148, 2, 0, 4784149, 2, 0, 4784150, 2, 0, 4784151, 2, 0, 4784152, 2, 0, 4784153, 2, 0, 4784154, 2, 0, 4784155, 2, 0, 4784156, 2, 0, 4784157, 2, 0, 4784158, 2, 0, 4784159, 2, 0, 4784160, 2, 0, 4784161, 2, 0, 4784162, 2, 0, 4784163, 2, 0, 4784164, 2, 0, 4784165, 2, 0, 4784166, 2, 0, 4784167, 2, 0, 4784168, 2, 0, 4784169, 2, 0, 4784172, 2, 0, 4784173, 2, 0, 4784174, 2, 0, 4784175, 2, 0, 4784176, 2, 0, 4784177, 2, 0, 4784178, 2, 0, 4784179, 2, 0, 4784180, 2, 0, 4784181, 2, 0, 4784182, 2, 0, 4784183, 2, 0, 4784184, 2, 0, 4784185, 2, 0, 4784186, 2, 0, 4784187, 2, 0, 4784188, 2, 0, 4784189, 2, 0, 4784190, 2, 0, 4784191, 2, 0, 4784192, 2, 0, 4784193, 2, 0, 4784194, 2, 0, 4784195, 2, 0, 4784196, 2, 0, 4784197, 2, 0, 4784198, 2, 0, 4784199, 2, 0, 4784200, 2, 0, 4784201, 2, 0, 4784202, 2, 0, 4784203, 2, 0, 4784204, 2, 0, 4784205, 2, 0, 4784206, 2, 0, 4784207, 2, 0, 4784208, 2, 0, 4784209, 2, 0, 4784210, 2, 0, 4784211, 2, 0, 4784212, 2, 0, 4784213, 2, 0, 4784214, 2, 0, 4784215, 2, 0, 4784216, 2, 0, 4784219, 2, 0, 4784221, 2, 0, 4784222, 2, 0, 4784223, 2, 0, 4784224, 2, 0, 4784225, 2, 0, 4784226, 2, 0, 4784227, 2, 0, 4784228, 2, 0, 4784229, 2, 0, 4784230, 2, 0, 4784231, 2, 0, 4784232, 2, 0, 4784233, 2, 0, 4784234, 2, 0, 4784235, 2, 0, 4784236, 2, 0, 4784237, 2, 0, 4784238, 2, 0, 4784239, 2, 0, 4784240, 2, 0, 4784241, 2, 0, 4784242, 2, 0, 4784243, 2, 0, 4784244, 2, 0, 4784245, 2, 0, 4784246, 2, 0, 4784247, 2, 0, 4784248, 2, 0, 4784249, 2, 0, 4784253, 2, 0, 4784254, 2, 0, 4784255, 2, 0, 4849664, 2, 0, 4849665, 2, 0, 4849666, 2, 0, 4849667, 2, 0, 4849668, 2, 0, 4849669, 2, 0, 4849670, 2, 0, 4849671, 2, 0, 4849672, 2, 0, 4849673, 2, 0, 4849674, 2, 0, 4849789, 2, 0, 4915203, 2, 0, 4915204, 2, 0, 4915205, 2, 0, 4915206, 2, 0, 4915207, 2, 0, 4915208, 2, 0, 4915209, 2, 0, 4980741, 2, 0, 4980742, 2, 0, 4980746, 2, 0 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 663.398, 544.766 )
scale = Vector2( 0.480001, 0.47902 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="player"]
position = Vector2( -9.15527e-05, 1.04387 )
scale = Vector2( 0.0785924, 0.125753 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2D3"]
shape = SubResource( 2 )

[node name="player2" type="KinematicBody2D" parent="."]
position = Vector2( 621.821, 476.73 )
scale = Vector2( 0.480001, 0.47902 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="player2"]
position = Vector2( 0.780457, -2.34587 )
scale = Vector2( 0.212664, 0.238982 )
texture = ExtResource( 4 )

[node name="Area2D2" type="Area2D" parent="player2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2/Area2D2"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 566.89, 534.985 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -67.9332, -24.2084 )
shape = SubResource( 9 )

[node name="GameOverDialog" type="ConfirmationDialog" parent="."]
pause_mode = 2
margin_left = 413.191
margin_top = 273.342
margin_right = 613.191
margin_bottom = 343.342
window_title = "Game Over"
dialog_text = "You Win!!
"
[connection signal="area_entered" from="finish/Area2D1" to="finish" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="finish/Area2D1" to="finish" method="_on_Area2D1_area_entered"]
[connection signal="area_entered" from="player/Area2D3" to="player" method="_on_Area2D3_area_entered"]
[connection signal="area_entered" from="player2/Area2D2" to="player2" method="_on_Area2D2_area_entered"]
[connection signal="area_entered" from="Area2D" to="player" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D" to="finish" method="_on_Area2D_area_entered"]
[connection signal="confirmed" from="GameOverDialog" to="." method="_on_GameOverDialog_confirmed"]
